[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmdc_api_utilities"
version = "0.4.2"
description = "A Python library for general research functions using NMDC APIs"
authors = [
    { name = "Olivia Hess", email = "olivia.hess@pnnl.gov" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Core dependencies - lightweight API client essentials
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
    "oaklib>=0.6.23",
    "duckdb>=1.4.1",
]
license = {text = "MIT"}

[project.scripts]
nmdc = "nmdc_api_utilities.cli:app"

[project.optional-dependencies]
# Visualization extras
viz = [
    "matplotlib>=3.10.0",
]
# GFF utilities with DuckDB for efficient queries
gff = [
    "duckdb>=0.10.0",
]
# Enrichment analysis with statistical tests
enrich = [
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]
# Development dependencies
dev = [
    "pre-commit",
    "sphinx",
    "sphinx_rtd_theme",
    "myst_parser",
    "pytest",
    "python-dotenv",
    "build",
    "twine",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["nmdc_api_utilities"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "papermill>=2.6.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
