[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmdc_api_utilities"

version = "0.6.1"

description = "A Python library for general research functions using NMDC APIs"
authors = [
    { name = "Olivia Hess", email = "olivia.hess@pnnl.gov" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Configure pytest.
# Docs: https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest]
addopts = ["--doctest-modules"]  # run doctests defined in _all_ modules (not only `test_*` modules)

# Configure mypy.
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file
[tool.mypy]
packages = ["nmdc_api_utilities"]  # check the `nmdc_api_utilities` package
exclude = "^nmdc_api_utilities/test/"  # ignore paths beginning with `nmdc_api_utilities/test/`
